# pj_TO_MLaSO_SIMP

./: .gitignore  custom_network_graph  params.txt  pyproject.toml  readme.md  rho.txt
.cursor/rules/: cursorrules.mdc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
config/: MLaSO-d_param.yaml
notebooks/: MLaSO-d.ipynb
scripts/: run_optimization.py  run_tests.py
src/core/: MLaSO-d.py  MLaSO-d_shm.py
src/utils/: sensitivity_net.py  wsl_run.sh
tests/: conftest.py  test_new_feature.py
tests/integration/: TO_test.py  levset-TO-test.py  schedule_free_test.py  shared_memory_test.py  test_pyfreefem.py
tests/unit/: test_optimization.py
